# Gscope

./: .gitignore  README.md  gscope.sym  meson.build  meson_options.txt
bindings/python/gscope/: __init__.py  _ffi.py  adapter.py  errors.py  scope.py
cli/: main.c  meson.build
debian/: changelog  control  copyright  gscope.install  libgscope-dev.install  rules
doc/: api.md  architecture.md  security.md  templates.md
include/gscope/: cgroup.h  error.h  gscope.h  namespace.h  network.h  process.h  rootfs.h  scope.h  security.h  template.h  types.h  user.h
src/: compat.h  error.c  internal.h  log.c  scope.c  state.c  util.c
src/cgroup/: cgroup.c  cgroup_stats.c
src/fs/: mount.c  overlay.c  pivot.c  rootfs.c
src/net/: addr.c  bridge.c  firewall.c  ip_alloc.c  netlink.c  route.c  veth.c
src/ns/: namespace.c  pidns.c  userns.c
src/proc/: pidfd.c  pty.c  spawn.c  wait.c
src/sec/: caps.c  priv.c  seccomp.c
src/template/: template.c  template_exec.c  template_file.c  template_internal.h  template_pkg.c  template_vars.c  template_verify.c
src/user/: user.c
tests/: meson.build  test_cgroup.c  test_error.c  test_namespace.c  test_network.c  test_rootfs.c  test_security.c  test_spawn.c  test_user.c
